force-app/main/default/objects/Bodega_SAP__mdt/fields/Activo__c.field-meta.xml
<!-- RCG - 13/11/2025 - Ticket N° 00024376 - Campo para activar/desactivar regla -->
<CustomField>
    <fullName>Activo__c</fullName>
    <label>Activo</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
    <description>Indica si esta configuración de bodega está activa. Solo las configuraciones activas se evalúan</description>
</CustomField>