force-app/main/default/objects/Bodega_SAP__mdt/fields/Codigo_Bodega_SAP__c.field-meta.xml
<!-- RCG - 13/11/2025 - Ticket N° 00024376 - Campo para código de bodega en SAP -->
<CustomField>
    <fullName>Codigo_Bodega_SAP__c</fullName>
    <label>Código Bodega SAP</label>
    <length>20</length>
    <description>Código de bodega en SAP (WarehouseCode). Ejemplos: VTLE, ST10, STA10, STSP10, STC10, VTADFL10</description>
    <required>true</required>
    <type>Text</type>
</CustomField>