force-app/main/default/objects/Bodega_SAP__mdt/fields/Linea_Negocio__c.field-meta.xml
<!-- RCG - 13/11/2025 - Ticket N° 00024376 - Campo para líneas de negocio -->
<CustomField>
    <fullName>Linea_Negocio__c</fullName>
    <label>Línea de Negocio</label>
    <length>255</length>
    <type>TextArea</type>
    <description>Códigos de línea de negocio separados por coma. Ejemplos: "21000,15000,10000" o "TODAS" para aplicar a cualquier línea</description>
</CustomField>