force-app/main/default/objects/Bodega_SAP__mdt/fields/Nombre_Bodega__c.field-meta.xml
<!-- RCG - 13/11/2025 - Ticket N° 00024376 - Campo para nombre descriptivo de bodega -->
<CustomField>
    <fullName>Nombre_Bodega__c</fullName>
    <label>Nombre Bodega</label>
    <length>100</length>
    <description>Nombre descriptivo de la bodega en SAP. Ejemplo: BODEGA VENTAS GENERACION LO ESPEJO</description>
    <type>Text</type>
</CustomField>