force-app/main/default/objects/Bodega_SAP__mdt/fields/Prioridad__c.field-meta.xml
<!-- RCG - 13/11/2025 - Ticket N° 00024376 - Campo para prioridad de evaluación -->
<CustomField>
    <fullName>Prioridad__c</fullName>
    <label>Prioridad</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Orden de evaluación de reglas. Menor número = mayor prioridad. HES-802 debe ser 1 (máxima), GE debe ser 2, Servicio debe ser 3</description>
</CustomField>