force-app/main/default/objects/Bodega_SAP__mdt/fields/Region_Despacho__c.field-meta.xml
<!-- RCG - 13/11/2025 - Ticket N° 00024376 - Campo para región de despacho -->
<CustomField>
    <fullName>Region_Despacho__c</fullName>
    <label>Región Despacho</label>
    <length>100</length>
    <type>Text</type>
    <description>Código de región de despacho separados por coma. Ejemplos: "13" (Santiago), "2" (Antofagasta), "8,10" (múltiples), o "TODAS"</description>
</CustomField>