force-app/main/default/objects/Bodega_SAP__mdt/fields/Requiere_HES__c.field-meta.xml
<!-- RCG - 13/11/2025 - Ticket N° 00024376 - Campo para condición HES -->
<CustomField>
    <fullName>Requiere_HES__c</fullName>
    <label>Requiere HES</label>
    <length>50</length>
    <type>Text</type>
    <description>Valores de Quote.RequiereHES__c separados por coma. Ejemplos: "HES,802" para condiciones especiales, "VENTA_NORMAL" para ventas normales, o "TODAS"</description>
</CustomField>